rdebrid-ui/ingressroute-rdebrid-ui.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rdebrid-ui.${dns_domain}
  namespace: rdebrid-ui
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rdebrid-ui.${dns_domain}`)
      kind: Rule
      services:
        - name: rdebrid-ui
          kind: Service
          port: 8080
