rdebrid-ui/ciliumnetworkpolicy-rdebrid-ui.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rdebrid-ui
  namespace: rdebrid-ui
spec:
  endpointSelector: {}
  ingress:
    # Allow from any pods in this namespace
    - fromEndpoints:
        - {}

    # Allow from Traefik to exposed port only
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "8080"
  egress:
    # Allow to the world
    - toEntities:
        - world

    # Allow to any pods in this namespace
    - toEndpoints:
        - {}

    # Allow to Kube DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
